// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom button className render is correct 1`] = `
<span
  data-for="table-tooltip"
>
  <button
    className="btn-table"
    disabled={false}
    onClick={[Function]}
    type="button"
  />
</span>
`;

exports[`Custom button default render is correct 1`] = `
<span
  data-for="table-tooltip"
>
  <button
    className="btn-table"
    disabled={false}
    onClick={[Function]}
    type="button"
  />
</span>
`;

exports[`Custom button disabled render is correct 1`] = `
<span
  data-for="table-tooltip"
>
  <button
    className="btn-table"
    disabled={true}
    onClick={[Function]}
    type="button"
  />
</span>
`;

exports[`Custom button icon render is correct 1`] = `
<span
  data-for="table-tooltip"
>
  <button
    className="btn-table"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <i />
  </button>
</span>
`;

exports[`Custom button onClick render is correct 1`] = `
<span
  data-for="table-tooltip"
>
  <button
    className="btn-table"
    disabled={false}
    onClick={[Function]}
    type="button"
  />
</span>
`;

exports[`Custom button tip render is correct 1`] = `
<span
  data-for="table-tooltip"
  data-tip="bar"
>
  <button
    className="btn-table"
    disabled={false}
    onClick={[Function]}
    type="button"
  />
</span>
`;
